@@ -29,7 +29,6 @@
 
 #include "xf86.h"
 #include "xf86_OSproc.h"
-#include "xf86_ansic.h"
 #include "dgaproc.h"
 
 #include "ffb.h"
