@@ -1,3 +1,14 @@
+2006-04-07  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/ffb.h:
+	* src/ffb_dac.c:
+	* src/ffb_ddc.c:
+	* src/ffb_dga.c:
+	* src/ffb_dri.c:
+	* src/ffb_driver.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.1.0.
+
 2006-01-25  Adam Jackson  <ajax@freedesktop.org>
 
 	* src/ffb_bcopy.c:
